Bug fix/shingle tokenizer avoid over lemmatisation (#12)
* fix: Avoid over lemmatization by removing all possible variants of a variant

* refacto: Rename batch to chunk

* refacto

* refacto: Optimize string functions

* refacto: Optimize text processing

* test: Add test for text functions

* refacto

* [maven-release-plugin] prepare release shuju-1.29

* [maven-release-plugin] prepare for next development iteration

---------

Co-authored-by: Romuald Rousseau <romuald.rousseau@servier.com>